force-app/main/default/objects/Workshop__c/Workshop__c.object-meta.xml
<CustomObject>
    <label>Workshop</label>
    <nameField>
        <label>Workshop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>