force-app/main/default/objects/Workshop__c/fields/Industry_Features__c.field-meta.xml
<CustomField>
    <fullName>Industry_Features__c</fullName>
    <label>Industry Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Subledger</fullName>
            </value>
            <value>
                <fullName>Actionable List Engagement</fullName>
            </value>
            <value>
                <fullName>Actionable List Members</fullName>
            </value>
            <value>
                <fullName>Actionable Relationship Center (ARC)</fullName>
            </value>
            <value>
                <fullName>Actionable Segmentation</fullName>
            </value>
            <value>
                <fullName>Action Launcher</fullName>
            </value>
            <value>
                <fullName>Action Plans</fullName>
            </value>
            <value>
                <fullName>Advanced Program Management</fullName>
            </value>
            <value>
                <fullName>AI Accelerator</fullName>
            </value>
            <value>
                <fullName>Asset Service Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Audit Trail</fullName>
            </value>
            <value>
                <fullName>Batch Management</fullName>
            </value>
            <value>
                <fullName>Business Rules Engine</fullName>
            </value>
            <value>
                <fullName>Care Plans</fullName>
            </value>
            <value>
                <fullName>Case Referrals</fullName>
            </value>
            <value>
                <fullName>Collections and Recovery</fullName>
            </value>
            <value>
                <fullName>Complaints Management</fullName>
            </value>
            <value>
                <fullName>Compliant Data Sharing</fullName>
            </value>
            <value>
                <fullName>Connected Assets</fullName>
            </value>
            <value>
                <fullName>Context Service</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Criteria-Based Search and Filter</fullName>
            </value>
            <value>
                <fullName>Cross-Object Field History</fullName>
            </value>
            <value>
                <fullName>CSV Data Management for Industries</fullName>
            </value>
            <value>
                <fullName>Data Consumption Framework</fullName>
            </value>
            <value>
                <fullName>Data Processing Engine</fullName>
            </value>
            <value>
                <fullName>Decision Explainer</fullName>
            </value>
            <value>
                <fullName>Decision Table</fullName>
            </value>
            <value>
                <fullName>Disclosure and Compliance Hub</fullName>
            </value>
            <value>
                <fullName>Discovery Framework and Assessments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>