force-app/main/default/objects/Workshop__c/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <formula>IMAGE(
        CASE(
            Technical_Rating__c,
            &quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
            &quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
            &quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;,
            &quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;,
            &quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;,
            &quot;/img/samples/stars_000.gif&quot;
        ),
        &quot;Star Rating&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>