force-app/main/default/objects/Workshop__c/fields/Technical_Rating__c.field-meta.xml
<CustomField>
    <fullName>Technical_Rating__c</fullName>
    <description>Rating of 1 is least technical to 5 being the expert technical level</description>
    <label>Technical Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>