force-app/main/default/objects/Workshop__c/fields/workshop_image__c.field-meta.xml
<CustomField>
    <fullName>workshop_image__c</fullName>
    <label>workshop image</label>
    <type>Url</type>
</CustomField>